--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   lint: ^1.5.3
   redux_thunk: ^0.4.0
+  firebase_auth: ^2.0.0
 
 dev_dependencies:
   flutter_test:
