--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   lint: ^1.5.3
   redux_thunk: ^0.4.0
   firebase_auth: ^2.0.0
+  firebase_core: ^1.3.0
 
 dev_dependencies:
   flutter_test:
