--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   redux_thunk: ^0.4.0
   firebase_auth: ^2.0.0
   firebase_core: ^1.3.0
+  flutter_signin_button: ^2.0.0
 
 dev_dependencies:
   flutter_test:
