--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   firebase_auth: ^2.0.0
   firebase_core: ^1.3.0
   flutter_signin_button: ^2.0.0
+  google_sign_in: ^5.0.4
 
 dev_dependencies:
   flutter_test:
